<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="#E2EEF3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your email"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your password"/>
        <EditText
            android:id="@+id/etPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</FrameLayout>